Fixed Career Images & Header
Fixed a bug in which Career Images were too big (komp.career.style.css).
Made Career Header smaller and less round (komp.career.style.css).

--- a/komps/career/komp.career.style.css
+++ b/komps/career/komp.career.style.css
@@ -101,7 +101,7 @@ career{
                 };
                 p:first-child {
                     font-size: 2.5vw;
-                    padding: 1.2vw;
+                    padding: 0.5vw;
                     background: #2a9b92;
                     background: var(--menu_background);
                     background-size: 200% 200%;
@@ -111,12 +111,12 @@ career{
                     border-color: rgba(255, 245, 227, 0.42);
                     border-style: solid;
                     border-width: 3px;
-                    border-radius: 20vw;
+                    border-radius: 4vw;
                 };
             };
             img{
                 padding: 2vw;
-                width: 50vw;  
+                width: 25vw;  
             };
             column{
                 display: flex;
@@ -127,6 +127,9 @@ career{
                 embed{
                     width: 50vw;
                     height: 91vh;
+                }
+                img{
+                    width: 50vw;
                 }
             }
             
